ajouts ia et changement nom du fichier html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div id="city-section-text">
                     <h2>des infos sur votre localisation ? 📍</h2>
                     <p>Peu importe le temps, il y a toujours une activité à faire. Notre service vous propose des idées variées et originales pour profiter pleinement de chaque moment. Que vous cherchiez à vous détendre, à vous divertir ou à vous aventurer, laissez-vous surprendre par nos suggestions pensées pour enrichir votre quotidien.</p>
-                    <a class="btn" href="">Les infos<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
+                    <a class="btn" href="./infos.html">Les infos<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
                 </div>
                 
             </div>
