--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav id="desktop-menu">
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="./index.html">Accueil</a></li>
                 <li><a href="#">La météo</a></li>
-                <li><a href="ia.html">La ville</a></li>
+                <li><a href="./infos.html">La ville</a></li>
             </ul>
         </nav>
 
