--- a/infos.html
+++ b/infos.html
@@ -144,9 +144,9 @@
 
         .word {
             position: relative;
-            top: 7px;
+            top: 9px;
             opacity: 0;
-            transition: all 0.5s cubic-bezier(0.37, 0.57, 0.44, 0.9);
+            transition: all 0.7s cubic-bezier(0.14,0.69,0.4,1.33)
         }
 
         .pointeur-animation {
@@ -175,6 +175,8 @@
                 transform: translateX(0);
             }
         }
+
+        
 
     </style>
 </head>
