--- a/infos.html
+++ b/infos.html
@@ -144,9 +144,9 @@
 
         .word {
             position: relative;
-            top: 9px;
+            top: 7px;
             opacity: 0;
-            transition: all 0.7s cubic-bezier(0.14,0.69,0.4,1.33)
+            transition: all 0.5s cubic-bezier(0.37, 0.57, 0.44, 0.9);
         }
 
         .pointeur-animation {
@@ -163,6 +163,8 @@
             text-align: center;
             font-size: 2rem;
             animation: fadeIn 1s;
+            font-weight: 300;
+            text-transform: uppercase;
         }
 
         @keyframes fadeIn {
