--- a/infos.html
+++ b/infos.html
@@ -51,7 +51,7 @@
             line-height: 1.2;
             font-style: normal;
             max-width: 50vw;
-            font-size: 1.8rem;
+            font-size: 1.7rem;
             font-weight: 600;
             color: #333;
             word-wrap: break-word;
@@ -163,6 +163,7 @@
             text-align: center;
             font-size: 2rem;
             animation: fadeIn 1s;
+            margin-bottom: 2rem;
             font-weight: 300;
             text-transform: uppercase;
         }
@@ -175,6 +176,21 @@
             100% {
                 opacity: 1;
                 transform: translateX(0);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .reponse-conteneur {
+                margin: 10vh 0px;
+            }
+
+            #reponse, #reponse-back {
+                font-size: 1rem;
+            }
+
+            .titre {
+                font-size: 1.5rem;
+                margin-bottom: 1rem;
             }
         }
 
@@ -315,7 +331,7 @@
                     <img class="pointeur no-select" src="https://s3-alpha-sig.figma.com/img/cbae/6d24/89985c6fa0c99d2e33f7e705ad894935?Expires=1735516800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=qgKjsTz-mAcgYLXc70oB~eYmJxklVP1lZN98tcCvw326pgp4gtmnCUSJy68veYAXEWfSeiqDbDlQ69ps~NwHx69XIcb3zmu5mCM2oQX4f2BZjC1GJ3-MKo3dPClZe8gh8YGpx9Xhu6J6kC4gNcOylN3U5KF98ZubYWIJ0KXTCpQMZrvuAMwzUPOUsuFxYKLhu72uqLII3GSk95~TczKGfwIktjAHVTV653zKEE6uvvZ1WIeRFUnbc~f2dbJBYLKpLiRuFaJ2-qvC28HFtyNyBfHPOAsVBW8KWc4dt5z7MqEmhptqDzxlMv80Lpeb8~jIBt7z~QcwVRDbv0ww2lr~Ng__">
                 `
 
-                const baseContent = `<div class="titre">Quelques idées de parcours à ${inputObject.ville}</div> <br> ${pointeurIconElement}`
+                const baseContent = `<div class="titre">Quelques idées de parcours à ${inputObject.ville}</div> ${pointeurIconElement}`
 
                 reponseEl.innerHTML = baseContent
                 reponseBackEl.innerHTML = baseContent
