--- a/infos.html
+++ b/infos.html
@@ -302,7 +302,7 @@
 
         async function envoyerRequeteApi(inputObject) {
 
-            const message = `Raconte moi l'histoire de la ville de ${inputObject.ville}, ${inputObject.codePostal}, ${inputObject.region}, ${inputObject.pays}`;
+            const message = `Que peut-on faire dans la ville de ${inputObject.ville}, ${inputObject.codePostal}, ${inputObject.region}, ${inputObject.pays} ?`;
 
             const reponseEl = document.getElementById('reponse');
             const reponseBackEl = document.getElementById('reponse-back');
