changement de prompt

--- a/infos.html
+++ b/infos.html
@@ -309,7 +309,7 @@
 
         async function envoyerRequeteApi(inputObject) {
 
-            const message = `Que peut-on faire dans la ville de ${inputObject.ville} ? Voici quelques informations supplémentaire sur la ville pour t'aider à répondre : code postal : ${inputObject.codePostal}, région : ${inputObject.region}, pays : ${inputObject.pays}`;
+            const message = `Que peut-on faire dans la ville de ${inputObject.ville} et ses alentours ? Voici quelques informations supplémentaire sur la ville pour t'aider à répondre : code postal : ${inputObject.codePostal}, région : ${inputObject.region}, pays : ${inputObject.pays}`;
 
             const reponseEl = document.getElementById('reponse');
             const reponseBackEl = document.getElementById('reponse-back');
